--- a/DevelopmentCode/Programming/src/index.css
+++ b/DevelopmentCode/Programming/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html,
 body,
 #root {
@@ -10,11 +11,13 @@ body,
   height: 100%;
   overflow: hidden;
 }
+
 /* 根组件的样式 */
 #app {
   width: 100%;
   height: 100%;
 }
+
 /* canvas的样式 */
 canvas {
   position: absolute;
@@ -25,6 +28,7 @@ canvas {
   height: 100%;
   z-index: -999;
 }
+
 #content {
   position: absolute;
   top: 0;
@@ -32,15 +36,18 @@ canvas {
   width: 100%;
   height: 100%;
 }
+
 /* 输入框组件 */
 #ipt_btn {
   width: 6rem !important;
   color: #fff;
   border-color: white;
 }
+
 #ipt_btn:hover {
   border-color: #0d6efd;
 }
+
 input#ipt_search {
   font-size: 1.3rem;
   color: #fff;
@@ -48,12 +55,14 @@ input#ipt_search {
   letter-spacing: 0.8rem;
   font-family: "楷体", "宋体", "微软雅黑";
 }
+
 input#ipt_search:focus {
   transition: letter-spacing 0.5s;
   letter-spacing: 0.2rem;
   outline: 1px solid blue;
   box-shadow: 0 0 5px 3px blue;
 }
+
 /* 资源链接区块 */
 /* #carouselExampleIndicators {
   width: 50rem;
@@ -64,41 +73,104 @@ a {
   color: #fff;
   font-weight: 700;
 }
+
 a:hover {
   color: orangered;
 }
+
 .carousel-inner {
   height: 30rem;
 }
+
 /* 利用媒体查询解决屏幕在不同尺寸设备上的问题 */
-@media screen and (min-width: 300px){
+@media screen and (min-width: 300px) {
   .carousel-inner img {
     width: 2rem;
     height: 2rem;
   }
-  .carousel-control-prev,.carousel-control-next {
+
+  .carousel-control-prev,
+  .carousel-control-next {
     width: 1.2rem;
   }
+
+  #rel {
+    position: fixed;
+    right: 2rem;
+    bottom: 2rem;
+  }
 }
+
 @media screen and (min-width: 576px) {
   .carousel-inner img {
     width: 2.3rem;
     height: 2.3rem;
   }
+
+  #rel {
+    position: fixed;
+    right: 3rem;
+    bottom: 2rem;
+  }
 }
+
 @media screen and (min-width: 768px) {
+
   /* 920px屏幕下的项目图片大小 */
   .carousel-inner img {
     width: 3rem;
     height: 3rem;
   }
-  .carousel-control-prev,.carousel-control-next {
+
+  .carousel-control-prev,
+  .carousel-control-next {
     width: 1.3rem;
   }
+
+  #rel {
+    position: fixed;
+    right: 5rem;
+    bottom: 3rem;
+  }
+
 }
-@media  screen and (min-width: 992px) {
+
+@media screen and (min-width: 992px) {
+
   /* 下一页按钮的宽度 */
-  .carousel-control-prev,.carousel-control-next {
+  .carousel-control-prev,
+  .carousel-control-next {
     width: auto;
   }
+
+  #rel {
+    position: fixed;
+    right: 6rem;
+    bottom: 4rem;
+  }
+}
+
+/* 联系方式组件 */
+#rel {
+  background-color: rgba(0, 0, 0, .1);
+}
+
+#rel>div {
+  padding-left: .5rem;
+  padding-right: .5rem;
+}
+
+#rel a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  line-height: 30px;
+  text-align: center;
+}
+
+label[for="switchBg"]:hover {
+  color: orangered;
+  cursor: pointer;
 }
